--- a/webapp/main/templates/back/news_add.html
+++ b/webapp/main/templates/back/news_add.html
@@ -16,6 +16,138 @@
                        <!-- END Datatables Header -->
 
                        <!-- Datatables Content -->
+                       <div class="row">
+                           <div class="col-md-12">
+                               <!-- Basic Form Elements Block -->
+                               <div class="block">
+                                   <!-- Basic Form Elements Title -->
+                                   <div class="block-title">
+                                       <div class="block-options pull-right">
+                                           <a href="javascript:void(0)" class="btn btn-alt btn-sm btn-default toggle-bordered enable-tooltip" data-toggle="button" title="Toggles .form-bordered class">No Borders</a>
+                                       </div>
+                                       <h2><strong>Basic Form</strong> Elements</h2>
+                                   </div>
+                                   <!-- END Form Elements Title -->
+
+                                   <!-- Basic Form Elements Content -->
+                                   <form action="page_forms_general.html" method="post" enctype="multipart/form-data" class="form-horizontal form-bordered" onsubmit="return false;">
+                                       <div class="form-group">
+                                           <label class="col-md-3 control-label">Static</label>
+                                           <div class="col-md-9">
+                                               <p class="form-control-static">Username</p>
+                                           </div>
+                                       </div>
+                                       <div class="form-group">
+                                           <label class="col-md-3 control-label" for="example-text-input">Text Input</label>
+                                           <div class="col-md-9">
+                                               <input type="text" id="example-text-input" name="example-text-input" class="form-control" placeholder="Text">
+                                               <span class="help-block">This is a help text</span>
+                                           </div>
+                                       </div>
+                                       <div class="form-group">
+                                           <label class="col-md-3 control-label" for="example-email-input">Email Input</label>
+                                           <div class="col-md-9">
+                                               <input type="email" id="example-email-input" name="example-email-input" class="form-control" placeholder="Enter Email">
+                                               <span class="help-block">Please enter your email</span>
+                                           </div>
+                                       </div>
+                                       <div class="form-group">
+                                           <label class="col-md-3 control-label" for="example-password-input">Password</label>
+                                           <div class="col-md-9">
+                                               <input type="password" id="example-password-input" name="example-password-input" class="form-control" placeholder="Password">
+                                               <span class="help-block">Please enter a complex password</span>
+                                           </div>
+                                       </div>
+                                       <div class="form-group">
+                                           <label class="col-md-3 control-label" for="example-disabled-input">Disabled Input</label>
+                                           <div class="col-md-9">
+                                               <input type="text" id="example-disabled-input" name="example-disabled-input" class="form-control" placeholder="Disabled" disabled>
+                                           </div>
+                                       </div>
+                                       <div class="form-group">
+                                           <label class="col-md-3 control-label" for="example-textarea-input">Textarea</label>
+                                           <div class="col-md-9">
+                                               <textarea id="example-textarea-input" name="example-textarea-input" rows="9" class="form-control" placeholder="Content.."></textarea>
+                                           </div>
+                                       </div>
+                                       <div class="form-group form-actions">
+                                           <div class="col-md-9 col-md-offset-3">
+                                               <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> Submit</button>
+                                               <button type="reset" class="btn btn-sm btn-warning"><i class="fa fa-repeat"></i> Reset</button>
+                                           </div>
+                                       </div>
+                                   </form>
+                                   <!-- END Basic Form Elements Content -->
+                               </div>
+                               <!-- END Basic Form Elements Block -->
+                           </div>
+                           <div class="col-md-6">
+                               <!-- Horizontal Form Block -->
+                               <div class="block">
+                                   <!-- Horizontal Form Title -->
+                                   <div class="block-title">
+                                       <div class="block-options pull-right">
+                                           <a href="javascript:void(0)" class="btn btn-alt btn-sm btn-default toggle-bordered enable-tooltip" data-toggle="button" title="Toggles .form-bordered class">No Borders</a>
+                                       </div>
+                                       <h2><strong>Horizontal</strong> Form</h2>
+                                   </div>
+                                   <!-- END Horizontal Form Title -->
+
+                                   <!-- Horizontal Form Content -->
+                                   <form action="page_forms_general.html" method="post" class="form-horizontal form-bordered" onsubmit="return false;">
+                                       <div class="form-group">
+                                           <label class="col-md-3 control-label" for="example-hf-email">Email</label>
+                                           <div class="col-md-9">
+                                               <input type="email" id="example-hf-email" name="example-hf-email" class="form-control" placeholder="Enter Email..">
+                                               <span class="help-block">Please enter your email</span>
+                                           </div>
+                                       </div>
+                                       <div class="form-group">
+                                           <label class="col-md-3 control-label" for="example-hf-password">Password</label>
+                                           <div class="col-md-9">
+                                               <input type="password" id="example-hf-password" name="example-hf-password" class="form-control" placeholder="Enter Password..">
+                                               <span class="help-block">Please enter your password</span>
+                                           </div>
+                                       </div>
+                                       <div class="form-group form-actions">
+                                           <div class="col-md-9 col-md-offset-3">
+                                               <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-user"></i> Login</button>
+                                               <button type="reset" class="btn btn-sm btn-warning"><i class="fa fa-repeat"></i> Reset</button>
+                                           </div>
+                                       </div>
+                                   </form>
+                                   <!-- END Horizontal Form Content -->
+                               </div>
+                               <!-- END Horizontal Form Block -->
+
+                               <!-- Normal Form Block -->
+                               <div class="block">
+                                   <!-- Normal Form Title -->
+                                   <div class="block-title">
+                                       <div class="block-options pull-right">
+                                           <a href="javascript:void(0)" class="btn btn-alt btn-sm btn-default toggle-bordered enable-tooltip" data-toggle="button" title="Toggles .form-bordered class">No Borders</a>
+                                       </div>
+                                       <h2><strong>Normal</strong> Form</h2>
+                                   </div>
+                                   <!-- END Normal Form Title -->
+
+                                   <!-- Normal Form Content -->
+                                   <form action="page_forms_general.html" method="post" class="form-bordered" onsubmit="return false;">
+                                       <div class="form-group">
+                                           <label for="example-nf-email">Email</label>
+                                           <input type="email" id="example-nf-email" name="example-nf-email" class="form-control" placeholder="Enter Email..">
+                                           <span class="help-block">Please enter your email</span>
+                                       </div>
+                                       <div class="form-group">
+                                           <label for="example-nf-password">Password</label>
+                                           <input type="password" id="example-nf-password" name="example-nf-password" class="form-control" placeholder="Enter Password..">
+                                           <span class="help-block">Please enter your password</span>
+                                       </div>
+                                       <div class="form-group form-actions">
+                                           <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-user"></i> Login</button>
+                                           <button type="reset" class="btn btn-sm btn-warning"><i class="fa fa-repeat"></i> Reset</button>
+                                       </div>
+                                   </form>
                        <!-- END Datatables Content -->
 {% endblock %}
 
