--- a/webapp/main/templates/back/news_list.html
+++ b/webapp/main/templates/back/news_list.html
@@ -43,9 +43,9 @@
                                            <td class="text-center"><img src="{% static 'back/img/placeholders/avatars/avatar15.jpg' %}" alt="avatar" class="img-circle"></td>
                                            <td>{{zad.name}} </td>
                                            <td>{{zad.date}}</td>
-                                           <td>-</td>
+                                           <td>{{zad.category_name}}</td>
                                            <td>{{zad.writer}}</td>
-                                           <td>-</td>
+                                           <td>{{zad.show}}</td>
                                            <td class="text-center">
                                                <div class="btn-group">
                                                    <a href="javascript:void(0)" data-toggle="tooltip" title="Edit" class="btn btn-xs btn-default"><i class="fa fa-pencil"></i></a>
