Addes Date Time

--- a/webapp/main/templates/back/news_add.html
+++ b/webapp/main/templates/back/news_add.html
@@ -47,10 +47,14 @@
                                             <div class="col-md-12">
                                       <textarea type="text" id="shorttext" name="shorttext" rows="5" class="form-control" placeholder="Short Text"></textarea>
                                         </div>
-                                      </div>
+
                                            <div class="col-md-12">
                                      <textarea type="text" id="bodytext" name="bodytext" rows="5"  class="form-control" placeholder="Body Text"></textarea>
                                        </div>
+                                     </div>
+                                          <div class="col-md-12">
+                                    <input type="file" id="uploaded_file" name="uploaded_file" rows="5"  class="form-control" placeholder="Body Text"></textarea>
+                                      </div>
                                        <div class="form-group">
                                          <div class="col-md-12">
                                            <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-angle-right"></i> Submit</button>
