--- a/webapp/main/templates/back/news_list.html
+++ b/webapp/main/templates/back/news_list.html
@@ -40,7 +40,7 @@
                                    <tbody>
                                        <tr>
                                            <td class="text-center">{{zad.pk}}</td>
-                                           <td class="text-center"><img src="{% static 'back/img/placeholders/avatars/avatar15.jpg' %}" alt="avatar" class="img-circle"></td>
+                                           <td class="text-center"><img style="display: inline-block; height:50px; weight:50px;" src="{{zad.picurl}}" alt="{{zad.picname}}" class="img-circle"></td>
                                            <td>{{zad.name}} </td>
                                            <td>{{zad.date}}</td>
                                            <td>{{zad.category_name}}</td>
