Added Date Time

--- a/webapp/main/templates/back/news_list.html
+++ b/webapp/main/templates/back/news_list.html
@@ -42,7 +42,7 @@
                                            <td class="text-center">{{zad.pk}}</td>
                                            <td class="text-center"><img style="display: inline-block; height:50px; weight:50px;" src="{{zad.picurl}}" alt="{{zad.picname}}" class="img-circle"></td>
                                            <td>{{zad.name}} </td>
-                                           <td>{{zad.date}}</td>
+                                           <td>{{zad.date}} | {{zad.time}}</td>
                                            <td>{{zad.category_name}}</td>
                                            <td>{{zad.writer}}</td>
                                            <td>{{zad.show}}</td>
