added category and category list

--- a/webapp/main/templates/back/master.html
+++ b/webapp/main/templates/back/master.html
@@ -259,6 +259,7 @@
 
 
                             <!-- Sidebar Navigation -->
+
                             <ul class="sidebar-nav">
                                 <li>
                                     <a href="/panel" class=" active"><i class="gi gi-stopwatch sidebar-nav-icon"></i><span class="sidebar-nav-mini-hide">Dashboard</span></a>
@@ -270,6 +271,15 @@
                                     <span class="sidebar-header-options clearfix"><a href="javascript:void(0)" data-toggle="tooltip" title="Quick Settings"><i class="gi gi-settings"></i></a></span>
                                     <span class="sidebar-header-title">Site Settings</span>
                                 </li>
+                                <li>
+                                    <a href="#" class="sidebar-nav-menu"><i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i><i class="gi gi-show_big_thumbnails sidebar-nav-icon"></i><span class="sidebar-nav-mini-hide">Category Panel</span></a>
+                                    <ul>
+                                        <li>
+                                            <a href="/panel/category/add">Add Category</a>
+                                            <a href="/panel/category/list">List Category</a>
+                                    </ul>
+                                </li>
+                              </li>
                                 <li>
                                     <a href="#" class="sidebar-nav-menu"><i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i><i class="gi gi-show_big_thumbnails sidebar-nav-icon"></i><span class="sidebar-nav-mini-hide">News Panel</span></a>
                                     <ul>
