--- a/03 - Youtube Downloader/templates/front/youtube_download_home.html
+++ b/03 - Youtube Downloader/templates/front/youtube_download_home.html
@@ -5,10 +5,9 @@
         <h1 class="cover-heading">Ydownload(A new Youtube Downloader)</h1>
         <p class="lead">This project is powered by Django and Bootstrap</p>
         <p class="lead">
-            <form action="/download/" method="post">
-            <label for="url">Enter URL:</label>
+            <form method="post">
             {% csrf_token %}
-            <input type="url" name="url_request" id="url" placeholder="https://example.com" pattern="https://.*" required>
+            {{ form.as_p }}
             <input type="submit" value="Submit" class="btn btn-dark">
         </form>
       </main>
