--- a/staticfiles + template/templates/front/thank_you_poll.html
+++ b/staticfiles + template/templates/front/thank_you_poll.html
@@ -1,14 +1,11 @@
-{% extends "front/base.html" %}
+{% extends "front/polls_base.html" %}
 {% block title %}Short URL{% endblock %}
 
 {% block contentblock %}
     <main role="main" class="inner cover">
         <p class="lead">
             <p class="lead">
-                Here is your URL:
-            </p>
-            <h1>
-                http://127.0.0.1:8000/{{ url }}
-            </h1>
+            Thank you for Voting. Would you like to see the <a href="/poll_result/{{ pk }}/">results?</a>
+        </p>
     </main>
 {% endblock %}
