--- a/templates/front/youtube_download_home.html
+++ b/templates/front/youtube_download_home.html
@@ -1,15 +1,16 @@
 {% extends "front/base.html" %}
 {% block title %} Url Shortener {% endblock %}
 {% block contentblock %}
-<main role="main" class="inner cover">
-        <h1 class="cover-heading">Ushort(A new Url Shortener)</h1>
-        <p class="lead">This project is powered by Flask and Bootstrap</p>
+    <main role="main" class="inner cover">
+        <h1 class="cover-heading">Ydownload(A new Youtube Downloader)</h1>
+        <p class="lead">This project is powered by Django and Bootstrap</p>
         <p class="lead">
-            <form method="post">
+        <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="Submit" class="btn btn-dark">
         </form>
-      </main>
+    </main>
+
 
 {% endblock %}
