--- a/templates/front/show_all_polls.html
+++ b/templates/front/show_all_polls.html
@@ -1,11 +1,23 @@
 {% extends "front/base.html" %}
 
+<!--    Working
 
+        $(document).ready(setInterval(function () {
+            $("#ajaxReload").load(" #ajaxReload");
+        }), 10000);
+
+        -->
 {% block heroblock %}
+    <script type="text/javascript">
+    window.setInterval(function (){
+        $("#ajaxReload").load(" #ajaxReload");
+    }, 5000)
 
-    <div class="ajaxReloadCall">
+    </script>
+{#    <button hidden>Click me</button>#}
+
+    <div id="ajaxReload">
         {% for poll in polls %}
-            <div class="pollNo{{ poll.pk }}">
             <section class="card hero" style="text-align: center">
                 <div class="hero-body">
                     <div class="container">
@@ -18,9 +30,8 @@
                     </div>
                 </div>
             </section>
-            </div>
-
             <br>
+
         {% endfor %}
     </div>
 
