--- a/templates/front/urlshortener_showaddedurl.html
+++ b/templates/front/urlshortener_showaddedurl.html
@@ -26,7 +26,7 @@
                     Here is your shortened URL:
                 </h1>
                 <h2 class="subtitle">
-                    <a href="http://127.0.0e.1:8000/urlshortener/{{ url }}">
+                    <a href="http://127.0.0.1:8000/urlshortener/{{ url }}">
                         http://127.0.0.1:8000/urlshortener/{{ url }}
                     </a>
                 </h2>
