--- a/06 - SoundCore/soundcore/soundcore/templates/soundcore/index.html
+++ b/06 - SoundCore/soundcore/soundcore/templates/soundcore/index.html
@@ -9,7 +9,9 @@
             .search_input_wrapper {
                 display: none;
             }
+
         }
+
     </style>
     <style>
         html {
@@ -47,10 +49,6 @@
             transform: translateY(-12px);
         }
 
-        .left-menu {
-            background-color: #161616;
-            height: 100vh;
-        }
 
         .top-navbar {
             background-color: #161616;
@@ -155,57 +153,6 @@
             overflow: hidden;
         }
 
-        .icon_box {
-            width: 240px;
-            background-color: transparent;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-            height: 10px;
-            border-radius: 0;
-        }
-
-        .icon_box_column {
-            transform: translateY(-12px);
-        }
-
-        .icon_box:hover {
-            background-color: #404040;
-        }
-
-        .icons {
-            border-bottom: 1px solid #313131;
-            padding-bottom: .5em;
-        }
-
-        .icon_text {
-            color: #e0e0ec
-        }
-
-        .is_icon_active {
-            background-color: #242424;
-        }
-
-        .playlist-wrapper {
-            padding-top: .5em
-        }
-
-        .add-icon-box {
-            height: 25px;
-            width: 25px;
-            background-color: transparent;
-            transform: translateY(-5px);
-            border: 1px solid white;
-            border-radius: 8px;
-        }
-
-        .add-icon-wrapper {
-            display: flex;
-            justify-content: center;
-            padding: .5em;
-            transform: translateX(-25px);
-        }
 
     </style>
 {% endblock %}
@@ -268,97 +215,7 @@
     </div>
     <div class="columns is-mobile ">
         <div class="column is-narrow left_menu_wrapper">
-            <aside class="menu left-menu">
-                <div class="icons">
-                    <a href="{% url 'home' %}">
-                        <div class="box icon_box is_icon_active">
-                            <div class="columns is-mobile icon_box_column">
-                                <div class="column is-2 is-offset-1">
-                                    <ion-icon class="home__icon" name="home-outline"></ion-icon>
-                                    <script async>
-                                        anime({
-                                            targets: '.home__icon',
-                                            color: '#FFFFFF',
-                                            scale: 1.4
-                                        })
-                                    </script>
-                                </div>
-
-                                <div class="column icon_text">
-                                    Home
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-
-                    <a href="{% url 'library_home' %}">
-                        <div class="box icon_box">
-                            <div class="columns is-mobile icon_box_column">
-                                <div class="column is-2 is-offset-1">
-                                    <ion-icon class="library__icon" name="library-outline"></ion-icon>
-                                    <script async>
-                                        anime({
-                                            targets: '.library__icon',
-                                            color: '#FFFFFF',
-                                            scale: 1.4,
-                                        })
-                                    </script>
-                                </div>
-                                <div class="column icon_text">
-                                    Library
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-
-                </div>
-                <div class="playlist-wrapper">
-                    <div class="playlist-add">
-                        <div class="columns is-centered">
-                            <div class="column">
-                                <a href="#" class="add-icon-wrapper">
-                                    <div class="add-icon-box">
-                                        <ion-icon class="add__icon" name="add-outline"></ion-icon>
-
-                                    </div>
-
-                                </a>
-                                <script>
-                                    anime({
-                                        targets: '.add__icon',
-                                        color: '#FFFFFF',
-                                        easing: 'linear',
-                                        duration: 0,
-                                        scale: 1.3,
-                                        translateX: 3,
-                                    })
-                                </script>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="playlist">
-                        <a href="#">
-                            <div class="box icon_box">
-                                <div class="columns is-mobile is-centered icon_box_column">
-                                    <div class="column is-2 is-offset-1">
-                                        <ion-icon class="playlist__icon" name="list-outline"></ion-icon>
-                                        <script async>
-                                            anime({
-                                                targets: '.playlist__icon',
-                                                color: '#FFFFFF',
-                                                scale: 1.6
-                                            })
-                                        </script>
-                                    </div>
-                                    <div class="column icon_text">
-                                        Playlist
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </aside>
+            {% include 'left-sidebar.html' with active="home" %}
         </div>
         <div class="column right-column">
             <div class="grid-container">
@@ -384,45 +241,4 @@
 {% endblock %}
 
 {% block afterbody %}
-    <script defer>
-        const hamburgerElement = document.getElementById('hamburger_icon_wrapper_id')
-        const leftMenuElement = document.getElementsByClassName('left-menu')[0]
-        hamburgerElement.addEventListener('click', () => {
-            if (leftMenuElement.classList.contains('left-menu-hidden')) {
-                anime({
-                    targets: '.left-menu',
-                    translateX: 0,
-                    duration: 500,
-                    easing: 'easeOutSine',
-                    complete: () => {
-                        leftMenuElement.classList.remove('left-menu-hidden')
-                    }
-                })
-                anime({
-                    targets: '.left-menu',
-                    width: '240',
-                    duration: 400,
-                    easing: 'easeOutSine',
-                })
-
-            } else if (!leftMenuElement.classList.contains('left-menu-hidden')) {
-                anime({
-                    targets: '.left-menu',
-                    translateX: -500,
-                    duration: 500,
-                    easing: 'easeOutSine',
-                    complete: () => {
-                        leftMenuElement.classList.add('left-menu-hidden')
-                    }
-                })
-                anime({
-                    targets: '.left-menu',
-                    width: '0',
-                    duration: 400,
-                    easing: 'easeOutSine',
-                })
-            }
-
-        })
-    </script>
 {% endblock %}
