--- a/06 - SoundCore/soundcore/templates/footer-player.html
+++ b/06 - SoundCore/soundcore/templates/footer-player.html
@@ -1,3 +1,8 @@
+<style>
+    .footer {
+        max-height: 10vh;
+    }
+</style>
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
