--- a/06 - SoundCore/soundcore/templates/footer-player.html
+++ b/06 - SoundCore/soundcore/templates/footer-player.html
@@ -1,14 +1,107 @@
 <style>
+    /* This is active in outer scope */
+    .is_footer_active {
+        max-height: 88vh;
+    }
+
+    .is_translated_minus_fifty_pixels {
+        transform: translateY(-50px);
+    }
+
     .footer {
         max-height: 10vh;
+        background-color: #161616;
+    }
+
+
+    .slider {
+        -webkit-appearance: none;
+        width: 100%;
+        height: 15px;
+        border-radius: 5px;
+        background: transparent;
+        outline: none;
+    }
+
+
+    .slider::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        background: #4a4a4a;
+        cursor: pointer;
+    }
+
+    .slider::-moz-range-thumb {
+        width: 20px;
+        height: 20px;
+        border: black;
+        border-radius: 50%;
+        background: #4a4a4a;
+        cursor: pointer;
+    }
+
+    .footer_input_anchor {
+        position: relative;
+    }
+
+    .footer_input_anchor > progress {
+        position: absolute;
+    }
+
+    .footer_input_anchor > input {
+        position: absolute;
+        transform: translateY(-2px);
+    }
+
+    .footer_column {
+        transform: translateY(-1em);
     }
 </style>
-<footer class="footer">
-  <div class="content has-text-centered">
-    <p>
-      <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
-      <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-      is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
-    </p>
-  </div>
+<footer class="footer is_translated_minus_fifty_pixels">
+    <div class="columns footer_column">
+        <div class="column"></div>
+        <div class="column ">
+            <div class="columns is-mobile">
+                <div class="column is-narrow">
+                    0:00
+                </div>
+                <div class="column footer_input_anchor">
+                    <progress id='slider_progress' class="progress is-small" value="0" max="100"></progress>
+                    <input onchange="handleSliderInputChange()" id="transparent_slider"
+                           class="slider" step=".01"
+                           min="0" max="100" value="0"
+                           type="range">
+
+                </div>
+            </div>
+        </div>
+        <div class="column"></div>
+    </div>
 </footer>
+<script async>
+
+    const onDomLoadFunction = (fn) => {
+        if (document.readyState != 'loading') {
+            fn();
+        } else {
+            document.addEventListener('DOMContentLoaded', fn);
+        }
+    }
+    const resetValue = () => {
+        const transparentSliderInputDiv = document.getElementById('transparent_slider')
+        transparentSliderInputDiv.value = 0;
+    }
+
+    onDomLoadFunction(resetValue)
+
+</script>
+<script>
+    const handleSliderInputChange = async () => {
+        const transparentSliderInputDiv = document.getElementById('transparent_slider')
+        const sliderProgressBar = document.getElementById('slider_progress')
+        sliderProgressBar.value = transparentSliderInputDiv.value
+    }
+</script>
