--- a/06 - SoundCore/soundcore/templates/footer-player.html
+++ b/06 - SoundCore/soundcore/templates/footer-player.html
@@ -1,21 +1,26 @@
+<!-- Footer Player Component -->
+
+<!-- Progressive Image Loader for lazy loading images -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/progressive-image.js/dist/progressive-image.css">
+<script src="https://cdn.jsdelivr.net/npm/progressive-image.js/dist/progressive-image.js"></script>
+
+<!-- HowlerJS for Playing cross browser audio -->
 <script src="https://cdn.jsdelivr.net/npm/howler@2.2.1/dist/howler.min.js"
         integrity="sha256-Z6YgsC4qiy8o007mNQmCgSXEmS8CGtzwXi6rzyP/ZiE=" crossorigin="anonymous"></script>
+<!-- Lodash for state management and superpower -->
 <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"
         integrity="sha256-qXBd/EfAdjOA2FGrGAG+b3YBn2tn5A6bhz+LSgYD96k=" crossorigin="anonymous"></script>
 
 <style>
     /* This is active in outer scope */
     .is_footer_active {
-        max-height: 88vh;
+        max-height: 85vh;
     }
 
-    .is_translated_minus_fifty_pixels {
-        transform: translateY(-50px);
-    }
 
     .footer {
-        max-height: 10vh;
         background-color: #161616;
+        transform: translateY(-12px);
     }
 
 
@@ -77,7 +82,7 @@
     }
 
     .post_input {
-        transform: translateY(-7px) translateX(1em);
+        transform: translateY(-7px);
         color: white;
         opacity: .4;
     }
@@ -85,9 +90,13 @@
     .footer_info_column {
         transform: translateY(-1.6em);
     }
+
+    .footer_control_column {
+        transform: translateY(-2em);
+    }
 </style>
 
-<footer class="footer is_translated_minus_fifty_pixels">
+<footer class="footer ">
     <div class="columns is-mobile footer_column">
         <div class="column footer_info_column">
             <article class="media">
@@ -108,18 +117,60 @@
             </article>
 
         </div>
-        <div class="column ">
+        <div class="column footer_control_column">
+            <div class="columns is-mobile is-centered">
+                <div class="column is-2 has-text-centered">
+                    <ion-icon class="previous_icon" name="play-skip-back-circle-outline"></ion-icon>
+                    <script async>
+                        anime({
+                            targets: '.previous_icon',
+                            scale: 2,
+                            color: "#FFFFFF",
+                            duration: 1,
+                            translateY: 5,
+                            easing: 'linear',
+                        })
+                    </script>
+                </div>
+                <div class="column is-2 has-text-centered">
+                    <ion-icon class="play_icon" id="play-icon" name="play-circle-outline"></ion-icon>
+                    <script async>
+                        anime({
+                            targets: '.play_icon',
+                            scale: 2,
+                            color: "#FFFFFF",
+                            duration: 1,
+                            translateY: 5,
+                            easing: 'linear',
+                        })
+                    </script>
+                </div>
+                <div class="column is-2 has-text-centered">
+                    <ion-icon class="skip_icon" name="play-skip-forward-circle-outline"></ion-icon>
+                    <script async>
+                        anime({
+                            targets: '.skip_icon',
+                            scale: 2,
+                            color: "#FFFFFF",
+                            duration: 1,
+                            translateY: 5,
+                            easing: 'linear',
+                        })
+                    </script>
+                </div>
+            </div>
             <div class="columns is-mobile">
                 <div class="column is-narrow pre_input">
                     0:00
                 </div>
-                <div class="column footer_input_anchor">
-                    <progress id='slider_progress' class="progress is-small" value="0" max="100"></progress>
-                    <input onchange="handleSliderInputChange()" id="transparent_slider"
-                           class="slider" step=".01"
-                           min="0" max="100" value="0"
-                           type="range">
-
+                <div class="column ">
+                    <div class="footer_input_anchor">
+                        <progress id='slider_progress' class="progress is-small" value="0" max="100"></progress>
+                        <input onchange="handleSliderInputChange()" id="transparent_slider"
+                               class="slider" step=".01"
+                               min="0" max="100" value="0"
+                               type="range">
+                    </div>
                 </div>
                 <div class="column is-narrow post_input">
                     1:00
@@ -166,7 +217,6 @@
         //  console.log(arr);
     }
 
-
 </script>
 
 <script>
@@ -177,13 +227,25 @@
     let howlerArray = []
 
     const howlerJsPlay = async (id) => {
+        /* Handles the play.
+            So if you call sound.play(). This function should handle that
+       */
+        const srcArray = []
+        const fileFormatArray = [];
         let sound;
+
         const url = `{% url 'song_generator' %}?id=${id}`
+        const fileFormat = (document.getElementById(`song-file-format-${id}`).innerText).toLowerCase()
+
+        // Add files to Array for HowlerJS to play
+        await addOrRemove(srcArray, url)
+        await addOrRemove(fileFormatArray, fileFormat)
 
         if (_.size(howlerArray) === 0) {
             soundObject = new Howl({
-                src: [`${url}`],
+                src: srcArray,
                 html5: true,
+                format: fileFormatArray,
             })
             await addOrRemove(howlerArray, soundObject)
         } else if (_.size(howlerArray) >= 0) {
@@ -191,8 +253,9 @@
             playingSound.stop()
 
             soundObject = new Howl({
-                src: [`${url}`],
+                src: srcArray,
                 html5: true,
+                format: fileFormatArray,
             })
             await addOrRemove(howlerArray, soundObject)
         }
@@ -231,7 +294,6 @@
         newSongSampleRateDiv.innerText = `${previousSongSampleRateDiv.innerText} hz`
     }
 </script>
-
 <script defer>
     const handleSongItemClick = async (id) => {
         await howlerJsPlay(id)
