--- a/06 - SoundCore/soundcore/templates/base.html
+++ b/06 - SoundCore/soundcore/templates/base.html
@@ -13,6 +13,9 @@
     <!-- We need Bulma For Everything. So a global import is good -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"
           integrity="sha256-O8SsQwDg1R10WnKJNyYgd9J3rlom+YSVcGbEF5RmfFk=" crossorigin="anonymous">
+    <!-- Lodash for state management and superpower -->
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"
+            integrity="sha256-qXBd/EfAdjOA2FGrGAG+b3YBn2tn5A6bhz+LSgYD96k=" crossorigin="anonymous"></script>
     {% block head %}{% endblock %}
     <title>
         {% block title %}{% endblock %}
